@@ -13,6 +13,7 @@ import net.minecraft.util.Formatting;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -35,6 +36,7 @@ public class Minehut {
     }
 
     //(BuggyAl) this gets information about a server in json
+    @Deprecated
     public static JsonObject getServer(ClientPlayerEntity player, String serverName) {
         try {
             URL apiURL = new URL("https://api.minehut.com/server/" + serverName + "?byName=true");
@@ -64,6 +66,7 @@ public class Minehut {
     }
 
     //this gets a player's mh rank through their uuid, has to have dashes in
+    @Deprecated
     public static String getRank(String uuid) {
         try {
             //check if rank of player already has been cached
@@ -72,7 +75,7 @@ public class Minehut {
                 return playerRank.get(uuid);
             }
 
-            URL apiURL = new URL("https://api.minehut.com/cosmetics/profile/" + uuid);
+            URL apiURL = new URI("https://api.minehut.com/cosmetics/profile/" + uuid).toURL();
             HttpURLConnection connection = (HttpURLConnection) apiURL.openConnection();
             connection.setRequestMethod("GET");
 
